color picker needs to be aligned

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -96,8 +96,14 @@ button:hover {
 
 .wrapper {
   overflow: hidden;
+  padding: 30px;
 }
 
 #painting {
   float: left;
+}
+
+#colorposition {
+  float: left;
+  padding-left: 50px;
 }
