--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -96,7 +96,7 @@ button:hover {
 
 .wrapper {
   overflow: hidden;
-  padding: 30px;
+  padding: 15px;
 }
 
 #painting {
@@ -104,6 +104,7 @@ button:hover {
 }
 
 #colorposition {
+  font-size: 20px;
   float: left;
   padding-left: 30px;
 }
