some styling and chosen shape element added

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -108,3 +108,18 @@ button:hover {
   float: left;
   padding-left: 30px;
 }
+
+.sketch-picker {
+  margin-left: 20px;
+}
+
+#messageForm {
+  text-align: center;
+}
+
+#current {
+  text-align: center;
+  margin-left: 30px;
+  width: 200px;
+  word-wrap: break-word;
+}
